<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".InfoActivity"
    tools:ignore="MissingDefaultResource"
    android:background="?attr/backgroundImage">

    <Button
        android:id="@+id/buttonReturnToMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/button_return_menu"
        android:textSize="20sp"
        style="@style/ButtonStyle"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:background="@drawable/border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_title_1"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:background="@drawable/rounded_corners"
                android:layout_margin="30dp"
                android:padding="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_text_1"
                android:textSize="20sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_title_2"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:background="@drawable/rounded_corners"
                android:layout_margin="30dp"
                android:padding="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_text_2"
                android:textSize="20sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_title_3"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:background="@drawable/rounded_corners"
                android:layout_margin="30dp"
                android:padding="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_text_3"
                android:textSize="20sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_title_4"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:background="@drawable/rounded_corners"
                android:layout_margin="30dp"
                android:padding="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_text_4"
                android:textSize="20sp"
                android:gravity="center"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>